--- a/public/styles.css
+++ b/public/styles.css
@@ -1,56 +1,113 @@
 body {
   font-size: 120%;
   font-family: Arial;
-  background-color: #5CDB95;
-  color: #05386B;
+  background-color: #1A1A1D;
+  color: #C3073F;
 }
 
 header {
-  height: 150px;
-  padding-top: 10px;
-  text-align: center;
-  font-size: 1.5rem;
+  font-size: 130%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+}
+
+header p {
+  position: relative;
+  top: -50px
+}
+
+input {
+  font-size: 100%;
+  font-family: Arial;
+  
+}
+
+button {
+  font-size: 70%;
+  font-family: Arial;
+  width: 170px;
+  color: #C3073F;
+  height: 40px;
+  margin: 10px;
+  border-radius: 5px;
+  border-style: 1px solid;
+  border-color: #C3073F;
+  background-color: #1A1A1D;
+  transition: all 0.3s;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #C3073F;
+  color: #1A1A1D;
+  transform: scale(1.1);
+  border-style: none
 }
 
 
-button, input {
-  font-size: 100%;
-  font-family: Arial;
+input {
+  width: 220px;
+  background-color: #1A1A1D;
+  color: #757475;
+  margin: 10px;
+  height: 40px;
+  border-radius: 5px;
+  border-style: solid;
+  border-color: #C3073F;
+
 }
 
 table {
   width: 100%;
-  
 }
 
 td, th {
-  border: 1px solid #379863;
+  border: 1px solid #dddddd;
   text-align: left;
-  /* padding: 1px; */
+  padding: 8px;
+  
 }
-/* 
-tr:nth-child(even) {
-  background-color: #dddddd;
-} */
+
+td {
+  color: #757475;
+}
 
 .error {
   color: red;
 }
 
-.wrapper {
-  margin: 0 auto;
-  max-width: 825px;
-  text-align: center;
+.total{
+  height: 50px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 30px;
 }
 
-.total {
-  font-size: 120%;
-  font-style: oblique;
+.total p {
+  position: relative;
+  top: -10px
 }
+
+/* .formContainer{
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 20%
+} */
 
 .form {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   margin-top: 25px;
-  width: 100%;
 }
 
 .transactions {
@@ -60,3 +117,42 @@ tr:nth-child(even) {
   width: 90%;
   margin: 0 auto;
 }
+
+.mainContainer{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  width: 100%;
+ 
+}
+
+.subContainer{
+  display: flex;
+  flex-direction: row;
+  /* flex-wrap: wrap; */
+  justify-content: center;
+  width: 90%;
+}
+
+.subContainer1{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 70%;
+  margin-top: 30px;
+}
+
+@media (max-width: 900px) {
+  .subContainer{
+    flex-direction: column;
+  }
+  .subContainer1{
+    width: 90%
+  }
+
+
+}
+
+
