--- a/public/styles.css
+++ b/public/styles.css
@@ -93,14 +93,6 @@ td {
   top: -10px
 }
 
-/* .formContainer{
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: center;
-  width: 20%
-} */
-
 .form {
   display: flex;
   justify-content: center;
@@ -111,6 +103,8 @@ td {
 }
 
 .transactions {
+  display: flex;
+  justify-content: center;
   text-align: left;
   max-height: 300px;
   overflow: auto;
@@ -131,17 +125,23 @@ td {
 .subContainer{
   display: flex;
   flex-direction: row;
-  /* flex-wrap: wrap; */
   justify-content: center;
+  align-items: center;
   width: 90%;
+}
+
+.tableContainer{
+  width: 60%
 }
 
 .subContainer1{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   width: 70%;
   margin-top: 30px;
+  margin-bottom: 50px;
 }
 
 @media (max-width: 900px) {
@@ -151,8 +151,9 @@ td {
   .subContainer1{
     width: 90%
   }
-
-
+  .tableContainer{
+    width: 100%
+  }
 }
 
 
